--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,10 @@
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3); /* Add shadow for depth */
 }
 
+.align-center {
+  text-align: center;
+}
+
 .overlay-close {
   position: absolute;
   top: 20px;
